<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_technology"
            android:icon="@drawable/keji"
            android:checked="true"
            android:title="@string/technology"
        />

        <item
            android:id="@+id/navigation_entertainment"
            android:icon="@drawable/yule"
            android:title="@string/entertainment"
        />

        <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting"
        />

    </group>

    <item android:title="@string/about_me">
        <menu>
            <item
                android:id="@+id/navigation_personal"
                android:icon="@drawable/ic_menu_user"
                android:title="@string/personal"
            />
        </menu>
    </item>

</menu>