<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:orientation="vertical"
    android:showDividers="middle">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/user_name"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_petname"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:maxEms="10"
            android:text="-"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/btn_petname"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="start|center_vertical"
            android:padding="30dp"

            android:text="@string/pet_name"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sex"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:maxEms="10"
        android:text="-"
        android:paddingRight="20dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/btn_sex"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="start|center_vertical"
        android:padding="30dp"
        android:text="@string/sex"
        android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/signature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxEms="12"
            android:paddingBottom="16dp"
            android:paddingRight="10dp"
            android:paddingTop="16dp"
            android:text="@string/sign_text"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_signature"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/signature_tv"
            android:layout_alignTop="@id/signature_tv"
            android:layout_centerVertical="true"

            android:gravity="start|center_vertical"
            android:text="@string/sign"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_logout"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_logout"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/logout"
        android:textColor="@color/grey"
        android:textSize="18sp" />

</LinearLayout>